k8s/envs/pie/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: corebanking-sim-j-ingress
  annotations:
    konghq.com/protocols: "http"
spec:
  ingressClassName: kong
  rules:
    - host: pie4.lan
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /core-banking
            backend:
              service:
                name: corebanking-sim-j
                port:
                  number: 8080
